--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.14"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.14",
+    "react-google-login": "^5.2.2"
   }
 }
